# learning-log

./: .gitignore  README.md
Hung-yi_Lee/: README.md  course_tracker.html
Hung-yi_Lee/2017ML/Lec12_DeepGenerativeModel/: generativemodel.md
Hung-yi_Lee/OrganizedNotes/: 01_foundations.md  02_optimization_regularization.md  03_architectures.md  04_nlp_models.md  05_generative_models.md  06_semi_supervised.md  07_history_scaling.md  README.md
dl-from-scratch/: README.md  pyproject.toml
dl-from-scratch/common/: functions.py  gradient.py  layers.py
dl-from-scratch/dataset/: mnist.py
dl-from-scratch/notebooks/: 01_python_fundamental.ipynb  02_perceptron.ipynb  03_neural_network.ipynb  04_training.ipynb  05_back_propagation.ipynb
mit/6.S184/: README.md  pyproject.toml
mit/6.S184/05_labs/: sde_lib.ipynb
mit/6.S184/05_labs/lab01/: lab01_my-solution.ipynb
mit/6.S184/05_labs/lab01/sde_lib/: __init__.py  base.py  densities.py  processes.py  visualization.py
mit/6.S184/05_labs/lab02/sde_lib/: __init__.py  base.py  densities.py  models.py  paths.py  processes.py  schedules.py  simulators.py  trainers.py  visualization.py
mit/6.S184/05_labs/lab03/: lab03_implement.ipynb  lab03_rewrite-code.ipynb  lab03_sde_lib.ipynb
mit/6.S184/05_labs/lab03/sde_lib/: __init__.py  base.py  densities.py  models.py  paths.py  processes.py  schedules.py  simulators.py  trainers.py  visualization.py
mit/6.S184/05_labs/sdelib/: __init__.py  paths.py  processes.py  schedules.py  simulators.py  trainers.py
wesklake/reinforcement-learning/: README.md
(+26 files in other folders)
